# striplog

./: .buildinfo  .coveragerc  .gitattributes  .gitignore  .travis.yaml  .travis.yml  AUTHORS.md  CHANGES.rst  CONTRIBUTING.md  LAS_template.txt  README.md  README.rst  Tutorial.ipynb  abbreviations.json  authors.html  changelog.html  contributing.html  cuttings_template.txt  development.html  genindex.html  howto.html  index.html  installation.html  las.py  license.html  lithology_template.txt  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  run_tests.py  search.html  searchindex.js  setup.cfg  setup.py  templates.py
.doctrees/: authors.doctree  changelog.doctree  contributing.doctree  development.doctree  environment.pickle  howto.doctree  index.doctree  installation.doctree  license.doctree
.doctrees/api/: striplog.canstrat.doctree  striplog.canstrat_codes.doctree  striplog.defaults.doctree  (+14 more)
_sources/: changelog.md.txt
api/: striplog.canstrat.html  striplog.canstrat_codes.html  striplog.component.html  striplog.defaults.html  striplog.description.html  striplog.hatches.html  striplog.html  striplog.interval.html  striplog.legend.html  striplog.lexicon.html  striplog.logo.html  striplog.markov.html  striplog.position.html  striplog.rock.html  striplog.striplog.html  striplog.templates.html  striplog.utils.html
data/: curve_template.txt  lexicon.json  requirements.txt
docs/: Makefile  basic_objects.nblink  binary_morphologies.nblink  component.rst  conf.py  development.md  display_objects.nblink  howto.rst  index.rst  installation.md  interval.rst  legend.rst  lexicon.rst  markov_chains.nblink  position.rst  post_process_html.py  pre_process_ipynb.py  readme.rst  requirements.txt  rock.rst  striplog.rst  striplog_and_curves.nblink  striplog_basics.nblink  striplog_expert.nblink  striplog_merge.nblink  striplog_with_datetime.nblink  tutorial.rst  tutorials.rst  tutorials_toc.rst  well.rst
striplog/: __init__.py  _version.py  canstrat.py  canstrat_codes.py  component.py  defaults.py  description.py  hatches.py  interval.py  las.py  legend.py  lexicon.py  logo.py  markov.py  position.py  rock.py  striplog.py  templates.py  utils.py  well.py
tests/: gen_baseline_images.py  test_canstrat.py  test_component.py  test_decor.py  test_interval.py  test_legend.py  test_lexicon.py  test_logo.py  test_markov.py  test_plots.py  test_position.py  test_striplog.py  test_utils.py  test_well.py  tests.py
tutorial/: 00_Read_me_first.html  01_Basics.html  01_Basics.ipynb  02_Basic_objects.html  02_Basic_objects.ipynb  03_Display_objects.html  04_Beyond_basics.html  04_Beyond_basics.ipynb  10_Extract_curves_into_striplogs.html  10_Handling_curve_data.html  11_Parse_a_description_into_components.html  11_Parsing_descriptions.html  12_Calculate_sand_proportion.html  12_Moving_sand_proportion.html  12_Moving_sand_proportion.ipynb  13_Binary_morphologies.html  13_Work_with_binary_logs.html  14_Merge.html  14_Merge.ipynb  14_Merge_overlapping_striplogs.html  15_Markov_chains.html  15_Model_sequences_with_Markov_chains.html  16_Block_logs.html  16_Blocked_logs.html  16_Blocked_logs.ipynb  Basic_objects.html  Basic_objects.ipynb  Binary_morphologies.ipynb  Display_objects.html  Display_objects.ipynb  Lexicon_object.ipynb  Markov_chain_what-ifs.ipynb  Markov_chains.ipynb  Merge_with_new_method.ipynb  P-129_striplog_from_image.las  Parsing_a_description.ipynb  Striplog_and_curves.ipynb  Striplog_basics.html  Striplog_basics.ipynb  Striplog_expert.html  (+12 more)
(+80 files in other folders)
