[metadata]
name = striplog
version = attr: striplog.__version__
author = Matt Hall
author_email = matt@agilescientific.com
description = Simulate snowflakes with Gravner-Griffeath algorithm.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agile-geoscience/snowfake
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 3 - Alpha
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = striplog
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
    requests
    myst-parser

[options.extras_require]
test = pytest; pytest-cov; pytest-mpl
docs = sphinx; sphinxcontrib-apidoc; furo; myst_parser
dev = pytest; pytest-cov; pytest-mpl; scikit-image; sphinx; sphinxcontrib-apidoc; furo; myst_parser