[metadata]
name = striplog
version = attr: striplog.__version__
author = The Striplog Authors
author_email = hello@agilescientific.com
description = Lithology and stratigraphic logs for wells and outcrop.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/agile-geoscience/striplog
classifiers =
    Intended Audience :: Science/Research
    Development Status :: 4 - Beta
    Natural Language :: English
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
packages = striplog
python_requires = >=3.6
install_requires =
    numpy
    matplotlib
    scipy
    requests

[options.extras_require]
test = pytest; pytest-cov; pytest-mpl
docs = sphinx; sphinxcontrib-apidoc; furo; myst_nb
dev = pytest; pytest-cov; pytest-mpl; scikit-image; sphinx; sphinxcontrib-apidoc; furo; myst_nb
